# electionwatch.et

./: .gitignore  README.md  flake.nix
candidates/: extract.py  main.py  pyproject.toml
candidates/data/json/: constituencies.json  index.json  parties.json  regions.json  station_links.json
transcripts/: analyze.py  main.py  pyproject.toml
transcripts/data/: parties.json
transcripts/data/etv_nebe/: 20260407-BPDQbsjWZ94.analysis.json  20260407-BPDQbsjWZ94.json  20260407-BPDQbsjWZ94.meta.json  20260416-3r4-I5zVvqg.analysis.json  20260416-3r4-I5zVvqg.json  20260416-3r4-I5zVvqg.meta.json  20260420-Gulr8Kw8-cQ.analysis.json  20260420-Gulr8Kw8-cQ.json  20260420-Gulr8Kw8-cQ.meta.json  20260422-aNQccF3jTT4.analysis.json  20260422-aNQccF3jTT4.json  20260422-aNQccF3jTT4.meta.json  20260425-9JcOOksO7Ok.analysis.json  20260425-9JcOOksO7Ok.json  20260425-9JcOOksO7Ok.meta.json  20260429-sKmJysWP-Kw.analysis.json  20260429-sKmJysWP-Kw.json  20260429-sKmJysWP-Kw.meta.json  20260506-ABmWjAn_Cyk.analysis.json  20260506-ABmWjAn_Cyk.json  20260506-ABmWjAn_Cyk.meta.json  20260509-UNvv-R93bok.analysis.json  20260509-UNvv-R93bok.json  20260509-UNvv-R93bok.meta.json  20260513-uXeJS1Tory0.analysis.json  20260513-uXeJS1Tory0.json  20260513-uXeJS1Tory0.meta.json  20260514--lZqsvPkYLY.analysis.json  20260514--lZqsvPkYLY.json  20260514--lZqsvPkYLY.meta.json
transcripts/data/fana_medrek/: 20260221-Isdiet0C9FA.analysis.json  20260221-Isdiet0C9FA.json  20260221-Isdiet0C9FA.meta.json  20260227-4byg_qME7DQ.analysis.json  20260227-4byg_qME7DQ.json  20260227-4byg_qME7DQ.meta.json  (+21 more)
(+142 files in other folders)
