[project]
name = "candidates"
version = "0.1.0"
description = "Download and structure NEBE 7th General Election candidate lists (HoPR + RC)"
requires-python = ">=3.14"
dependencies = [
    "httpx>=0.28.1",
    "pymupdf>=1.27.2.3",
    "rich>=15.0.0",
]

[dependency-groups]
dev = [
    "ruff>=0.15.13",
    "ty>=0.0.38",
]
