[project]
name = "transcripts"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "google-genai>=2.4.0",
    "python-dotenv>=1.2.2",
    "rich>=15.0.0",
    "youtube-transcript-api>=1.2.4",
    "yt-dlp>=2026.3.17",
]

[dependency-groups]
dev = [
    "ruff>=0.15.13",
    "ty>=0.0.37",
]
